# 2d-to-3d-relief

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: concepts.md  filament_profiles.md  slicer_guides.md
examples/: config_example.yaml  example_commands.md  sample_filaments.yaml  sample_palette.json
src/twod_to_threed_relief/: __init__.py  __main__.py  cli.py
src/twod_to_threed_relief/core/: __init__.py  config.py  imageproc.py  io.py  logging.py  mesh.py  models.py  palette.py  plan.py  tdblend.py
src/twod_to_threed_relief/ui/: app.py  main_window.py  workers.py
src/twod_to_threed_relief/ui/widgets/: __init__.py  calibration_wizard.py  filament_editor.py  image_viewer.py  palette_editor.py  slicer_guide.py  swap_table.py
tests/: test_cli.py  test_imageproc.py  test_plan.py  test_ui_import.py
